Fix logo alignment (#413)

--- a/assets/css/components/video-page.css
+++ b/assets/css/components/video-page.css
@@ -1,6 +1,11 @@
-.bc-page-icon {
-	padding-right: 5px;
-	padding-top: 5px;
+:is(h1, h2):has(> .bc-page-icon) {
+	align-items: center;
+	display: flex;
+	gap: 5px;
+
+	& .add-new-h2 {
+		top: 0;
+	}
 }
 
 .notice {
